Fixed alignment of title table.

--- a/website/results/results_static/match_results.css
+++ b/website/results/results_static/match_results.css
@@ -1,26 +1,7 @@
-.title-table-left {
-    text-align: right; 
-    padding-right: 5px;
-}
-
-.title-table-centre {
-    width: 10px;
-    text-align: center;
-}
-
-.title-table-right {
-    text-align: left;
-    padding-left: 5px;
-}
-
-.title-table {
-    width: 100%;
-    margin: 10px 0px;
-}
-
-.title-table td {
+.title-info {
     font-weight: bold;
     font-size: x-large;
+    text-align: center;
 }
 
 
